--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ html,body{
 	-ms-text-size-adjust: 100%;
 	-moz-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
+    scroll-behavior: smooth;
 }
 input,button,textarea{font-family:inherit;}
 
@@ -58,10 +59,22 @@ body{
 }
 .home{
     width: 100%;
-    /* background: linear-gradient(45deg, #ffffff, #ffa53d); */
+    background: linear-gradient(-45deg, #fffaf3, #ffd890, #ffc67b);
+    background-size: 400% 400%;
+    animation: gradient 10s ease infinite;
 }
 
-
+@keyframes gradient{
+    0%{
+        background-position: 0 50%;
+    }
+    50%{
+        background-position: 100% 50%;
+    }
+    100%{
+        background-position: 0 50%;
+    }
+}
 
 
 .header__body{
@@ -111,7 +124,6 @@ body{
     color: white;
     background: black;
     text-decoration: none;
-    padding: 10px 23px;
     border-radius: 20px;
     font-size: 18px;
     transition: all .5s;
@@ -356,13 +368,13 @@ body{
     font-size: 24px;
     text-decoration: none;
     transition: all .5s;
+    
 }
 .work__title a:hover{
     color: black;
 }
 
 .work__items{
-    width: 100%;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     grid-gap: 15px;
@@ -404,6 +416,7 @@ body{
     font-size: 20px;
     margin-top: 10px;
     transition: .5s;
+    border-radius: 20px;
 }
 .work .face.face1 a:hover{
     color: white;
@@ -435,14 +448,15 @@ body{
     width: 100%;
     padding: 50px 0;
 }
-.experience .titlecenter{
-    margin-bottom: 30px;
-}
+
 .exp{
     width: 100%;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+}
+.education {
+    margin-top: 30px;
 }
 .education .title{
     margin-bottom: 45px;
@@ -484,6 +498,7 @@ body{
 }
 .skills{
     width: 420px;
+    margin-top: 30px;
 }
 .skills h1{
     font-size: 36px;
@@ -617,7 +632,7 @@ body{
     margin-bottom: 50px;
     
 }
-.social__item{
+.social__item a{
     display: flex;
     align-items: center;
     padding: 10px 0;
@@ -627,8 +642,17 @@ body{
     margin-right: 30px;
     
 }
+.social__item h2{
+    color: black;
+}
 .social__item .fa-telegram{
     color: #0088CC;
+}
+.social__item i{
+    transition: .5s;
+}
+.social__item i:hover{
+    color: black;
 }
 .social__item .fa-discord{
     color: #7289DA;
@@ -695,14 +719,60 @@ input::placeholder{
 /* !!!!!!!!!!!!!!!!!!!!!!footer!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
 
 .footer{
+    position: relative;
     width: 100%;
-    padding: 50px 0;
-    background: #FFB800;
+    height: 300px;
     color: white;
+    overflow: hidden;
+}
+.footer .wave{
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #FF8A00;
+}
+.footer .wave span{
+    position: absolute;
+    width: 110%;
+    height: 1000px;
+    top: 0;
+    left: 50%;
+    background:#FFB800;
+    transform: translate(-50%, -75%);
+}
+.footer .wave span:nth-child(1){
+    animation: animate 5s linear infinite;
+    border-radius: 45%;
+    background: #FFB800;
+}
+.footer .wave span:nth-child(2){
+    animation: animate 10s linear infinite;
+    border-radius: 40%;
+    background: rgb(255, 184, 0, 0.5);
+}
+.footer .wave span:nth-child(3){
+    animation: animate 15s linear infinite;
+    border-radius: 42.5%;
+    background: rgb(255, 184, 0, 0.5);
+}
+@keyframes animate{
+    0%{
+        transform: translate(-50%, -75%) rotate(0deg);
+    }
+    100%{
+        transform: translate(-50%, -75%) rotate(360deg);
+    }
+}
+.footer .content{
+    position: relative;
+    padding: 50px 0;
+    z-index: 1;
 }
 .footer .top{
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 .footer .title h1{
     font-size: 48px;
@@ -720,12 +790,18 @@ input::placeholder{
 .footer i{
     color: white;
     font-size: 40px;
+    transition: .5s;
+}
+.footer i:hover{
+    color: black;
 }
 .footer .right{
     width: 100%;
     text-align: center;
-    margin-top: 100px;
+    margin-top: 50px;
 }
+
+
 
 
 
@@ -811,6 +887,9 @@ input::placeholder{
     .header__list li{
         margin-bottom: 20px;
     }
+    .home__content .title{
+        width: 100%;
+    }
 }
 @media (max-width:900px){
     .aboutme{
@@ -838,8 +917,64 @@ input::placeholder{
     .contact{
         padding: 20px 20px;
     }
+    .titlecenter h1{
+        font-size: 45px;
+    }
+    .undertitle h2{
+        font-size: 20px;
+    }
+    .exp h1{
+        font-size: 28px;
+    }
+    .aboutme .description{
+        font-size: 15px;
+    }
+    .about__items h1{
+        font-size: 20px;
+    }
+    .about__items h3{
+        font-size: 15px;
+    }
 }
-
+@media (max-width:400px){
+    .work{
+        width: 250px;
+        height: 250px;
+    }
+    .work__items{
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    }
+    .work .face.face2 h2{
+        font-size: 100px;
+    }
+    .work .face.face1 h2{
+        font-size: 25px;
+    }
+    .work .face.face1 a{
+        font-size: 15px;
+    }
+    .home__content h1{
+        font-size: 50px;
+    }
+    .home__content .btn{
+        font-size: 20px;
+        width: 150px;
+    }
+    .work__title .title h1{
+        font-size: 40px;
+    }
+    .work__title .title h2{
+        font-size: 18px;
+    }
+    .work__title a{
+        font-size: 18px;
+    }
+}
+@media (max-width:843px){
+    .footer .social{
+        margin: 30px auto;
+    }
+}
 
 
 
